# thetrueboolean

./: Readme.md
07.07.2024-game-engine-part2/: CMakeLists.txt  Readme.md
07.07.2024-game-engine-part2/src/: Rectangle.cpp  SdlInitializer.h  TextureManager.cpp
14.07.2024-flappy-bird/: CMakeLists.txt  main.cpp
14.07.2024-flappy-bird/engine/: CMakeLists.txt
14.07.2024-flappy-bird/engine/include/engine/: Color.h  Engine.h  IGame.h  SDLImageInitializer.h  SDLInitializer.h  TextureManager.h  Window.h
14.07.2024-flappy-bird/engine/include/engine/collision/: CollisionManager.h
14.07.2024-flappy-bird/engine/include/engine/timer/: CountdownTimer.h  Timer.h
14.07.2024-flappy-bird/engine/src/: Engine.cpp  SDLImageInitializer.cpp
14.07.2024-flappy-bird/engine/src/collision/: CollisionManager.cpp
14.07.2024-flappy-bird/engine/src/timer/: CountdownTimer.cpp
14.07.2024-flappy-bird/engine/src/utils/: Vec2.cpp
14.07.2024-flappy-bird/games/: CMakeLists.txt
14.07.2024-flappy-bird/games/flappy_bird/include/: Bird.h  Constants.h  FlappyBirdGame.h  PipesPair.h  PipesPairFactory.h  ScoreManager.h  SnowStorm.h  UIManager.h
14.07.2024-flappy-bird/games/flappy_bird/src/: Bird.cpp  FlappyBirdGame.cpp  PipesPair.cpp  PipesPairFactory.cpp  ScoreManager.cpp  SnowStorm.cpp  UIManager.cpp
17.06.2024-unit-testing/: CMakeLists.txt  Castle.cpp  Castle.h  Knight.cpp  Knight.h  Readme.md  SumTest.cpp  example.cpp
17.07.2024-flappy-bird/: main.cpp
17.07.2024-flappy-bird/src/: Engine.cpp  Engine.h  IGame.h  Rectangle.h  SdlInitializer.cpp  TextureManager.h
21.07.2024-snake/: CMakeLists.txt  main.cpp
21.07.2024-snake/engine/: CMakeLists.txt
21.07.2024-snake/engine/include/engine/: Engine.h  IKeyboardEventsListener.h  IMouseEventsListener.h  RandomGenerator.h
21.07.2024-snake/engine/include/engine/collision/: ICollidable.h
21.07.2024-snake/engine/src/: Engine.cpp  RandomGenerator.cpp  SDLInitializer.cpp  TextureManager.cpp  Window.cpp
21.07.2024-snake/engine/src/timer/: Timer.cpp
21.07.2024-snake/engine/src/utils/: Vec2.cpp
21.07.2024-snake/games/: CMakeLists.txt
21.07.2024-snake/games/snake/include/: Food.h  FoodFactory.h  ScreenBoundary.h  Snake.h  SnakeGame.h
21.07.2024-snake/games/snake/src/: Food.cpp  FoodFactory.cpp  ScreenBoundary.cpp  Snake.cpp  SnakeGame.cpp
21.07.2024-snake/lib/SDL2/windows/: SDL2main.lib
30.06.2024-game-engine-part1/: CMakeLists.txt  main.cpp
30.06.2025-blockchain-demo/: CMakeLists.txt  main.cpp
